--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,6 @@
       - POSTGRES_USER=testuser
       - POSTGRES_PASSWORD=testpassword
       - POSTGRES_DB=storedb
-    ports:
-      - 9000:5432
     networks:
       - store-network
     restart: unless-stopped
@@ -54,8 +52,6 @@
       - POSTGRES_USER=testuser
       - POSTGRES_PASSWORD=testpassword
       - POSTGRES_DB=reviewsdb
-    ports:
-      - 9001:5432
     networks:
       - store-network
     restart: unless-stopped
@@ -64,6 +60,11 @@
 
   boardgameofday:
     image: antonsleptsov/boardgameofday
+    environment:
+      - DB_HOST=storedb:5432
+      - DB_USER=testuser
+      - DB_PASSWORD=testpassword
+      - DB_DBNAME=storedb
     ports:
       - 8082:8080
     networks:
@@ -74,6 +75,11 @@
 
   bestboardgame:
     image: antonsleptsov/bestboardgame
+    environment:
+      - DB_HOST=storedb:5432
+      - DB_USER=testuser
+      - DB_PASSWORD=testpassword
+      - DB_DBNAME=storedb
     ports:
       - 8083:8080
     networks:
