--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -46,7 +46,7 @@ jobs:
           context: .
           file: ./Dockerfile.bestBoardGame  # путь к Dockerfile.bestBoardGame
           push: true
-          tags: antonsleptsov/bestboardgame:${{ steps.meta.outputs.tags }}
+          tags: antonsleptsov/bestboardgame:${{ steps.meta.outputs.sha }}  # исправленный тег
 
       # Build and push image for board game of the day
       - name: Build and push Docker image (boardGameOfDay)
@@ -55,7 +55,7 @@ jobs:
           context: .
           file: ./Dockerfile.boardGameOfDay  # путь к Dockerfile.boardGameOfDay
           push: true
-          tags: antonsleptsov/boardgameofday:${{ steps.meta.outputs.tags }}
+          tags: antonsleptsov/boardgameofday:${{ steps.meta.outputs.sha }}  # исправленный тег
 
       # Build and push image for reviews
       - name: Build and push Docker image (reviews)
@@ -64,7 +64,7 @@ jobs:
           context: .
           file: ./Dockerfile.reviews  # путь к Dockerfile.reviews
           push: true
-          tags: antonsleptsov/reviews:${{ steps.meta.outputs.tags }}
+          tags: antonsleptsov/reviews:${{ steps.meta.outputs.sha }}  # исправленный тег
 
       # Build and push image for store
       - name: Build and push Docker image (store)
@@ -73,4 +73,5 @@ jobs:
           context: .
           file: ./Dockerfile.store  # путь к Dockerfile.store
           push: true
-          tags: antonsleptsov/store:${{ steps.meta.outputs.tags }}
+          tags: antonsleptsov/store:${{ steps.meta.outputs.sha }}  # исправленный тег
+
