--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -17,6 +17,12 @@ jobs:
       - name: Set up Docker Buildx 
         uses: docker/setup-buildx-action@v2
 
+      - name: Get commit hash and branch name
+        id: vars
+        run: |
+          echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "BRANCH_NAME=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
       - name: Log in to Docker Hub 
         uses: docker/login-action@v2 
         with: 
@@ -28,33 +34,45 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.bestBoardGame  # путь к Dockerfile.bestBoardGame
+          file: ./Dockerfile.bestBoardGame
           push: true
-          tags: antonsleptsov/bestboardgame:latest  # явный тег
+          tags: |
+            antonsleptsov/bestboardgame:latest
+            antonsleptsov/bestboardgame:${{ env.COMMIT_HASH }}
+            antonsleptsov/bestboardgame:${{ env.BRANCH_NAME }}
 
       # Build and push image for board game of the day
       - name: Build and push Docker image (boardGameOfDay)
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.boardGameOfDay  # путь к Dockerfile.boardGameOfDay
+          file: ./Dockerfile.boardGameOfDay
           push: true
-          tags: antonsleptsov/boardgameofday:latest  # явный тег
+          tags: |
+            antonsleptsov/boardgameofday:latest
+            antonsleptsov/boardgameofday:${{ env.COMMIT_HASH }}
+            antonsleptsov/boardgameofday:${{ env.BRANCH_NAME }}
 
       # Build and push image for reviews
       - name: Build and push Docker image (reviews)
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.reviews  # путь к Dockerfile.reviews
+          file: ./Dockerfile.reviews
           push: true
-          tags: antonsleptsov/reviews:latest  # явный тег
+          tags: |
+            antonsleptsov/reviews:latest
+            antonsleptsov/reviews:${{ env.COMMIT_HASH }}
+            antonsleptsov/reviews:${{ env.BRANCH_NAME }}
 
       # Build and push image for store
       - name: Build and push Docker image (store)
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.store  # путь к Dockerfile.store
+          file: ./Dockerfile.store
           push: true
-          tags: antonsleptsov/store:latest  # явный тег
+          tags: |
+            antonsleptsov/store:latest
+            antonsleptsov/store:${{ env.COMMIT_HASH }}
+            antonsleptsov/store:${{ env.BRANCH_NAME }}
