--- a/Dockerfile.store
+++ b/Dockerfile.store
@@ -13,8 +13,14 @@ RUN dotnet build "OnlineStoreOfBoardGames.csproj" -c $BUILD_CONFIGURATION -o /ap
     dotnet publish "OnlineStoreOfBoardGames.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
+
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 COPY --from=build /app/publish .
+
+RUN chown -R $APP_UID:$APP_UID /app/wwwroot/images/BoardGame && \
+    chmod -R 755 /app/wwwroot/images/BoardGame
+
 ENTRYPOINT ["dotnet", "OnlineStoreOfBoardGames.dll"]
+
