--- a/Dockerfile.store
+++ b/Dockerfile.store
@@ -14,13 +14,18 @@ RUN dotnet build "OnlineStoreOfBoardGames.csproj" -c $BUILD_CONFIGURATION -o /ap
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
+    
 COPY --from=build /app/publish .
+    
 
-RUN chown -R $APP_UID:$APP_UID /app/wwwroot/images/BoardGame && \
-    chmod -R 755 /app/wwwroot/images/BoardGame
+RUN chown -R www-data:www-data /app/wwwroot/images/BoardGame && \
+        chmod -R 755 /app/wwwroot/images/BoardGame
+    
 
+USER www-data
+    
 ENTRYPOINT ["dotnet", "OnlineStoreOfBoardGames.dll"]
+    
 
