Added directory for images

--- a/.gitignore
+++ b/.gitignore
@@ -363,9 +363,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-OnlineStoreOfBoardGames/wwwroot/images/BoardGame/mainImage*.*
-OnlineStoreOfBoardGames/wwwroot/images/BoardGame/sideImage*.*
-!OnlineStoreOfBoardGames/wwwroot/images/BoardGame/mainImage-default.jpg
-!OnlineStoreOfBoardGames/wwwroot/images/BoardGame/sideImage-default.png
+OnlineStoreOfBoardGames/wwwroot/images/ImagesOfGame/*
+OnlineStoreOfBoardGames/wwwroot/images/ImagesOfGame/*
 
 *.vscode
