--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,6 @@
       - DB_USER=testuser
       - DB_PASSWORD=testpassword
       - DB_DBNAME=storedb
-      - REVIEWS_HOST=reviews:8080
-      - BOARD_DAME_OF_DAY_HOST=boardgameofday:8080
-      - BEST_BOARD_GAME_HOST=bestboardgame:8080
     ports:
       - 8080:8080
     networks:
@@ -18,6 +15,7 @@
     restart: unless-stopped
     volumes:
       - "/home/anton/home/volumes/boardGamesVolume/storeVolume:/app/wwwroot/images/ImagesOfGame"
+    user: "www-data" 
 
   storedb:
     image: postgres
