--- a/OnlineStoreOfBoardGames/OnlineStoreOfBoardGames.csproj
+++ b/OnlineStoreOfBoardGames/OnlineStoreOfBoardGames.csproj
@@ -249,6 +249,7 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.8" />
 		<PackageReference Include="Microsoft.JSInterop" Version="8.0.7" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
 		<PackageReference Include="System.Drawing.Common" Version="8.0.6" />
